--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author_bio: Open Source advocate and Privacy and Security researcher
 author_email: #
 author_location: London
 author_website_url: "https://charlesgek.github.com"
-typewrite-text: Hello everyone !
+typewrite-text: Open Source advocate and Privacy and Security researcher 
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
