--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.jpg
+author_logo: profile.webp
 author: Charles GEK
 author_bio: Open Source advocate and Privacy and Security researcher 
 author_email: #
