--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author_email: #
 author_location: London
 author_website_url: "https://charlesgek.github.com"
 typewrite-text: Open Source advocate and Privacy and Security researcher 
-hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
+hero_cover_img: sample_cover.webp # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
 author_work_experiences:
