--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ charlesgek:
    site: https://charlesgek.github.io
    avatar: profile.webp
    bio: "Open Source advocate and Privacy and Security researcher"
-   email: #
+   #email: #
    social:
       - title: "github"
         url: "https://github.com/charlesgek"
